--- a/defaults/snapraid-runner.conf.example
+++ b/defaults/snapraid-runner.conf.example
@@ -1,10 +1,10 @@
 [snapraid]
-; path to the snapraid executable (e.g. /bin/snapraid)
-executable = snapraid
+; path to the snapraid executable
+executable = /usr/bin/snapraid
 ; path to the snapraid config to be used
-config = snapraid.conf
+config = /config/snapraid.conf
 ; abort operation if there are more deletes than this, set to -1 to disable
-deletethreshold = 40
+deletethreshold = 50
 
 [logging]
 ; logfile to write to, leave empty to disable
@@ -15,23 +15,23 @@ maxsize = 5000
 [email]
 ; when to send an email, comma-separated list of [success, error]
 sendon = success,error
-; set to false to get full programm output via email
+; set to false to get full program output via email
 short = true
 subject = [SnapRAID] Status Report:
-from =
-to =
+from = myemail@gmail.com
+to = myemail@gmail.com
 
 [smtp]
-host =
+host = smtp.gmail.com
 ; leave empty for default port
-port =
+port = 465
 ; set to "true" to activate
-ssl = false
-user =
-password =
+ssl = true
+user = myemail@gmail.com
+password = supersecretpassword
 
 [scrub]
 ; set to true to run scrub after sync
-enabled = false
-percentage = 12
-older-than = 10
+enabled = true
+percentage = 22
+older-than = 12
